--- a/_pages/authors.html
+++ b/_pages/authors.html
@@ -2,7 +2,7 @@
 layout: page
 title: Authors
 permalink: /authors
-comments: false
+comments: "disabled"
 ---
 <div class="list-authors mt-5">
 {% for author in site.authors %}   
