--- a/_pages/authors.html
+++ b/_pages/authors.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Authors
-permalink: /authors
+title: admin
+permalink: /admin
 comments: "disabled"
 ---
 <div class="list-authors mt-5">
