--- a/404.html
+++ b/404.html
@@ -11,5 +11,5 @@ permalink: /404.html
 <div class="text-center">
 <h1 class="mt-5"><span class="badge badge-dark font-weight-normal">404</span></h1>
 <h1 class="display-1 mt-4 mb-4"> gk nemu banh</h1>
-<p>website elit internet dikit pencarian sulit <a href="{{site.baseurl}}/">mending turu</a></p>
+<p>website elit pencarian sulit <a href="{{site.baseurl}}/">mending turu</a></p>
 </div>
